[gd_scene load_steps=36 format=3 uid="uid://dendsncmqv646"]

[ext_resource type="Texture2D" uid="uid://cude8h8j0kc1n" path="res://ASSET/image.png" id="1_8wi7b"]
[ext_resource type="Script" path="res://Menu/menu.gd" id="1_okm5b"]
[ext_resource type="Texture2D" uid="uid://p64ss3kxyc5v" path="res://ASSET/image (1).png" id="2_tu1ub"]
[ext_resource type="Texture2D" uid="uid://dusum7ktjqole" path="res://ASSET/image (2).png" id="3_ncuqy"]
[ext_resource type="Texture2D" uid="uid://k5w22gseeeo7" path="res://ASSET/image (3).png" id="4_g120i"]
[ext_resource type="Texture2D" uid="uid://3s6w6pptpq2m" path="res://ASSET/image (4).png" id="5_e7agl"]
[ext_resource type="Texture2D" uid="uid://dh1s2a6cp2qio" path="res://ASSET/image (5).png" id="6_37h4n"]
[ext_resource type="Texture2D" uid="uid://c3j5o54owii1y" path="res://ASSET/image (6).png" id="7_j8drm"]
[ext_resource type="Texture2D" uid="uid://bvofikojvgmnp" path="res://ASSET/image (7).png" id="8_gg5sd"]
[ext_resource type="Texture2D" uid="uid://dxqx0v8lssxwn" path="res://ASSET/image (8).png" id="9_h6n26"]
[ext_resource type="Texture2D" uid="uid://b0q701njhb742" path="res://ASSET/image (9).png" id="10_1avi5"]
[ext_resource type="FontFile" uid="uid://dvixn83kbx1dw" path="res://ASSET/шрифт 1_0.otf" id="12_1ddgx"]
[ext_resource type="AudioStream" uid="uid://b5c8yh0veo6xr" path="res://Mus/Little Night song faster.mp3" id="13_gm337"]
[ext_resource type="AudioStream" uid="uid://bqbfrlp3u2aso" path="res://Mus/Little Night song normal.mp3" id="14_8jlrb"]
[ext_resource type="Texture2D" uid="uid://bmeg0imu103l" path="res://ASSET/circle (1).png" id="15_luyb3"]
[ext_resource type="AudioStream" uid="uid://yrtse71ckg5r" path="res://Mus/hit-effekt-dlya-stsenyi-ujasa-quotkrik-robotaquot-32209.mp3" id="16_e8vg8"]
[ext_resource type="Texture2D" uid="uid://ddusf0iwn7py" path="res://ASSET/е.jpg" id="17_1avjv"]
[ext_resource type="AudioStream" uid="uid://d0ih3s0mcmiv3" path="res://Mus/walkie-talkie-button-press_z1bs9fvd.mp3" id="18_0an6w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4nyc3"]
atlas = ExtResource("1_8wi7b")
region = Rect2(0, 0, 950, 519)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y7kk"]
atlas = ExtResource("2_tu1ub")
region = Rect2(0, 0, 948, 516)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b47e"]
atlas = ExtResource("3_ncuqy")
region = Rect2(0, 0, 947, 516)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib7hw"]
atlas = ExtResource("4_g120i")
region = Rect2(0, 0, 949, 516)

[sub_resource type="AtlasTexture" id="AtlasTexture_35uhd"]
atlas = ExtResource("5_e7agl")
region = Rect2(0, 0, 949, 515)

[sub_resource type="AtlasTexture" id="AtlasTexture_58cut"]
atlas = ExtResource("6_37h4n")
region = Rect2(0, 0, 949, 515)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5lsu"]
atlas = ExtResource("7_j8drm")
region = Rect2(0, 0, 950, 515)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wyex"]
atlas = ExtResource("8_gg5sd")
region = Rect2(0, 0, 950, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwch6"]
atlas = ExtResource("9_h6n26")
region = Rect2(0, 0, 949, 516)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5h5o"]
atlas = ExtResource("10_1avi5")
region = Rect2(0, 0, 951, 514)

[sub_resource type="SpriteFrames" id="SpriteFrames_qn0ve"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nyc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y7kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b47e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib7hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35uhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58cut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5lsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wyex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwch6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5h5o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_tehd5"]
resource_name = "1"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(3, 1), Vector2(13, 13), Vector2(7, 7), Vector2(0, 0), Vector2(-13, -13), Vector2(27, 27)]
}

[sub_resource type="Animation" id="Animation_f0pin"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:stream_paused")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect/Е:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DirectionalLight2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.6]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioStreamPlayer:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_a3lgn"]
resource_name = "play"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:stream_paused")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/Е:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.8, 1, 1.4, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_1ld4g"]
resource_name = "quit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DirectionalLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.6, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -20.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_msma0"]
_data = {
"1": SubResource("Animation_tehd5"),
"RESET": SubResource("Animation_f0pin"),
"play": SubResource("Animation_a3lgn"),
"quit": SubResource("Animation_1ld4g")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_c56ik"]
streams_count = 2
stream_0/stream = ExtResource("13_gm337")
stream_0/weight = 1.0
stream_1/stream = ExtResource("14_8jlrb")
stream_1/weight = 1.0

[node name="Menu" type="Node2D"]
script = ExtResource("1_okm5b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(914.608, 541.185)
scale = Vector2(1.92835, 2.10006)
sprite_frames = SubResource("SpriteFrames_qn0ve")
autoplay = "default"
frame_progress = 0.303105
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_msma0")
}
autoplay = "1"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_c56ik")
autoplay = true

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.6
blend_mode = 1

[node name="menu" type="Panel" parent="."]
offset_left = 3.0
offset_top = 1.0
offset_right = 43.0
offset_bottom = 41.0002

[node name="play" type="Button" parent="menu"]
layout_mode = 0
offset_left = 115.0
offset_top = 162.0
offset_right = 660.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("12_1ddgx")
theme_override_font_sizes/font_size = 100
text = "P l a y"

[node name="option" type="Button" parent="menu"]
layout_mode = 0
offset_left = 76.0
offset_top = 405.0
offset_right = 690.0
offset_bottom = 557.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("12_1ddgx")
theme_override_font_sizes/font_size = 100
text = "O p t i o n"

[node name="quit" type="Button" parent="menu"]
layout_mode = 0
offset_left = 152.0
offset_top = 650.0
offset_right = 616.0
offset_bottom = 765.0
theme_override_colors/font_color = Color(1, 0.245241, 0.187845, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("12_1ddgx")
theme_override_font_sizes/font_size = 100
text = "Q u i t "

[node name="Label" type="Label" parent="menu"]
layout_mode = 0
offset_left = 970.0
offset_top = 11.0
offset_right = 1740.0
offset_bottom = 149.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("12_1ddgx")
theme_override_font_sizes/font_size = 100
text = "Little Night"
horizontal_alignment = 1
vertical_alignment = 1

[node name="light" type="Node2D" parent="menu"]
position = Vector2(-3, -1)

[node name="PointLight2D5" type="PointLight2D" parent="menu/light"]
position = Vector2(1008, 898)
color = Color(1, 0, 0.101961, 1)
energy = 3.0
texture = ExtResource("15_luyb3")
metadata/_edit_lock_ = true

[node name="PointLight2D6" type="PointLight2D" parent="menu/light"]
position = Vector2(1558, 970)
color = Color(1, 0, 0.101961, 1)
energy = 3.0
texture = ExtResource("15_luyb3")
metadata/_edit_lock_ = true

[node name="PointLight2D7" type="PointLight2D" parent="menu/light"]
position = Vector2(364, 724)
color = Color(1, 0, 0.101961, 1)
energy = 3.0
texture = ExtResource("15_luyb3")
metadata/_edit_lock_ = true

[node name="PointLight2D8" type="PointLight2D" parent="menu/light"]
position = Vector2(351, 449)
color = Color(1, 0, 0.101961, 1)
energy = 3.0
texture = ExtResource("15_luyb3")
metadata/_edit_lock_ = true

[node name="PointLight2D9" type="PointLight2D" parent="menu/light"]
position = Vector2(359, 209)
color = Color(1, 0, 0.101961, 1)
energy = 3.0
texture = ExtResource("15_luyb3")
metadata/_edit_lock_ = true

[node name="PointLight2D10" type="PointLight2D" parent="menu/light"]
position = Vector2(1654, 724)
color = Color(1, 0, 0.101961, 1)
energy = 3.0
texture = ExtResource("15_luyb3")
metadata/_edit_lock_ = true

[node name="PointLight2D11" type="PointLight2D" parent="menu/light"]
position = Vector2(1010, 673)
color = Color(1, 0, 0.101961, 1)
energy = 3.0
texture = ExtResource("15_luyb3")
metadata/_edit_lock_ = true

[node name="PointLight2D12" type="PointLight2D" parent="menu/light"]
position = Vector2(1184, 334)
color = Color(1, 0, 0.101961, 1)
energy = 3.0
texture = ExtResource("15_luyb3")
metadata/_edit_lock_ = true

[node name="PointLight2D13" type="PointLight2D" parent="menu/light"]
position = Vector2(1598, 348)
color = Color(1, 0, 0.101961, 1)
energy = 3.0
texture = ExtResource("15_luyb3")
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_e8vg8")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -6.0
offset_right = 1828.0
offset_bottom = 1079.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Е" type="Sprite2D" parent="ColorRect"]
visible = false
position = Vector2(920.5, 539.5)
scale = Vector2(1.42891, 1.49861)
texture = ExtResource("17_1avjv")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_0an6w")

[connection signal="pressed" from="menu/play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="menu/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="menu/quit" to="." method="_on_button_2_pressed"]
